# walshadow

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  PHASE0.md  PHASE1.md  PHASE2.md  PHASE3.md  PHASE4.md  PHASE4b.md  PLAN.md  README.md
.github/workflows/: ci.yml
architecture/: README.md  bootstrap.dot  decoder.dot  emitter.dot  filter.dot  internals.dot  ops.dot  oracle.dot  overview.dot  palette.md  safety.dot  shadow.dot  shadow_communication.dot  source.dot  timeline_bootstrap.dot  timeline_restart.dot  timeline_streaming.dot  toast.dot  xact.dot
bench/: Cargo.toml  run_bench_suite.sh
bench/ec2/: .gitignore  README.md  aws-env.sh  lib.sh  stack.sh
bench/ec2/ec2-bench/: cloud-init.yaml  deploy.sh  node.env  teardown.sh
bench/ec2/ec2-clickhouse/: cloud-init.yaml  node.env
bench/ec2/ec2-peerdb/: cloud-init.yaml  deploy.sh  node.env  pre_down.sh  profile.sh  teardown.sh
bench/ec2/ec2-pg-standby/: cloud-init.yaml  deploy.sh  node.env  profile.sh  teardown.sh
bench/ec2/ec2-source-pg/: cloud-init.yaml  deploy.sh  node.env
bench/ec2/ec2-walshadow/: cloud-init.yaml  deploy.sh  node.env  profile.sh  provision.sh
bench/ec2/terraform/: main.tf  network.tf  nodes.tf  outputs.tf  variables.tf
bench/src/: lib.rs
clickhouse-c-rs/: Cargo.toml  LICENSE  README.md  build.rs
clickhouse-c-rs/clickhouse-c/: clickhouse-client.h  clickhouse-compression.h  clickhouse-lz4.h  clickhouse-openssl.h  clickhouse-posix-io.h  clickhouse-zstd.h  clickhouse.h
clickhouse-c-rs/examples/: spawn_clickhouse_local.rs
clickhouse-c-rs/src/: alloc.rs  async_client.rs  block.rs  builder.rs  client.rs  codec.rs  error.rs  io.rs  layout_probe.c  lib.rs  sys.rs  tls.rs  types.rs  wrapper.c
clickhouse-c-rs/tests/: async_client.rs  clickhouse_local.rs  layout.rs  readme_quickstarts.rs  tls.rs  tls_live.rs  validate_and_timeout.rs
docker/: DEMO.md  Dockerfile  Dockerfile.bench  ch-config.demo.toml  ch-config.toml  docker-compose.demo.yml  docker-compose.yml  entrypoint.sh
docker/prometheus/: prometheus.yml
pgext/: Makefile  walshadow--0.1.sql  walshadow.c  walshadow.control
pgext/expected/: walshadow.out
pgext/sql/: walshadow.sql
plans/: BASEBACKUP.md  FPI_COMPRESSION.md  FUTURE.md  GLOSSARY.md  INDEX.md  PHASE0.md  PHASE1.md  PHASE10.md  PHASE11.md  PHASE12.md  PHASE12bootstrap.md  PHASE12experiments.md  PHASE12plan.md  PHASE13.md  PHASE15.md  PHASE16.md  PHASE2.md  PHASE3.md  PHASE4.md  PHASE4b.md  PHASE5.md  PHASE5_prereq_async_sink.md  PHASE5_prereq_default_pk.md  PHASE5_prereq_fpi.md  PHASE6.md  PHASE6disk.md  PHASE7.md  PHASE8.md  PHASE9.md  PLAN.md  POST13zerocopy.md  PRE15.md  PRE5b.md  PRE5b1.md  PRE5b10.md  PRE5b2.md  PRE5b3.md  PRE5b4.md  PRE5b5.md  PRE5b6.md  (+21 more)
plans/future/: DESTINATIONS.md  FUZZ.md  INDEX.md  TABLESPACES.md  TOAST.md  catalog_capture_completeness.md  ch_bounce_recovery.md  coverage100.md  cross_table_ordering.md  dependencies.md  initial_load_backup.md  parallel_decode_and_insert.md  parked.md  peerdb.md  pinned_ddl_baseline.md  pipeline_backpressure_and_scaling.md  pipeline_microbench_stages.md  risks.md  runtime_config_from_pg.md  segment_compression.md  sequence_state.md  shadow_schema_export.md  shadow_toast.md  sync_commit_witness.md  toast_chunk_gc.md  two_phase_commit.md  xact_stash.md
plans/phase14/: 01-read-time-defaults.md  02-multi-insert.md  03-truncate.md  05-subxact-rollback.md  06-apply-lag-metrics.md  07-kill-restart-test.md  08-pgbench-acceptance-test.md  09-bootstrap-ch-e2e.md  PLAN.md  RETRO.md
plans/pre5/: PRE5.md  PRE5b.md  PRE5b2.md  PRE5b4.md  PRE5b5.md  PRE5b8.md  PRE5b9.md
plans/robot/: INDEX.md  _palette.md  bootstrap.md  decoder.md  emitter.md  filter.md  ops.md  oracle.md  safety.md  shadow.md  source.md  xact.md
sql/: runtime_config_install.sql
src/: atomic_stats.rs  backfill_bootstrap.rs  backfill_staging.rs  backup_backfill.rs  backup_page_walk.rs  backup_sink.rs  backup_source.rs  backup_source_direct.rs  backup_source_object_store.rs  budget.rs  catalog_tracker.rs  ch.rs  ch_ddl.rs  ch_emitter.rs  classify.rs  codecs.rs  config.rs  copy_backfill.rs  cursor.rs  decoder_sink.rs  filter.rs  filter_segment.rs  fpi.rs  fs.rs  heap_decoder.rs  lib.rs  main_data.rs  manifest.rs  mapping.rs  metrics.rs  opt_in.rs  oracle.rs  pg.rs  pg_class_decoder.rs  preflight.rs  queueing_record_sink.rs  record.rs  relation_resolver.rs  resume_plan.rs  retention.rs  (+22 more)
src/backfill/: backfill_bootstrap.rs  backfill_staging.rs  backfill_types.rs  backup_backfill.rs  backup_page_walk.rs  backup_sentinel.rs  backup_sink.rs  backup_source.rs  backup_source_direct.rs  backup_source_object_store.rs  copy_backfill.rs  mod.rs  opt_in.rs  pg_path.rs  spool.rs
src/catalog/: compat.rs  desc_log.rs  mod.rs  shadow.rs  shadow_catalog.rs  type_bridge.rs
src/decode/: codecs.rs  fpi.rs  (+4 more)
tests/: add_column_default.rs  bin_stream_e2e.rs  bootstrap_direct_ch.rs  bootstrap_direct_e2e.rs  bootstrap_object_store_ch.rs  bootstrap_object_store_e2e.rs  bootstrap_pipeline_ch.rs  catalog_seed.rs  classify_fixture.rs  composite_pkey.rs  control_plane_e2e.rs  copy_into.rs  cursor.rs  ddl_replicates.rs  desc_log_e2e.rs  desc_log_restart_e2e.rs  dirty_admission_e2e.rs  emitter_budget_flush.rs  emitter_native_types.rs  emitter_tls.rs  filter_round_trip.rs  kill_restart.rs  manifest.rs  multi_segment_filter.rs  multixact_visibility.rs  ops.rs  oracle.rs  oracle_types_e2e.rs  pgbench_acceptance.rs  phase10_ops.rs  phase11_cursor.rs  phase12_direct_e2e.rs  phase12_object_store_e2e.rs  phase14_add_column_default.rs  phase14_bootstrap_direct_ch.rs  phase14_bootstrap_object_store_ch.rs  phase14_copy_into.rs  phase14_kill_restart.rs  phase14_pgbench_acceptance.rs  phase14_subxact.rs  (+31 more)
walshadow-peerdb/: Cargo.toml
walshadow-peerdb/src/: auth.rs  control.rs  error.rs  lib.rs  main.rs  model.rs  pb.rs  response.rs  routes.rs  state.rs  stats.rs  warn.rs
walshadow-peerdb/src/handlers/: mirrors.rs  misc.rs  mod.rs  peers.rs
walshadow-peerdb/tests/: http.rs
walshadow_oracle/: Makefile  walshadow_oracle--0.1.sql  walshadow_oracle.c  walshadow_oracle.control
(+80 files in other folders)
