[workspace]
members = ["clickhouse-c-rs"]

[package]
name = "walshadow"
version = "0.1.0"
edition = "2024"
description = "Schema-only Postgres + WAL replay catalog mirror for CDC to ClickHouse"

[[bin]]
name = "walshadow-classify"
path = "src/bin/classify.rs"

[[bin]]
name = "walshadow-filter"
path = "src/bin/filter.rs"

[[bin]]
name = "walshadow-stream"
path = "src/bin/stream.rs"

[lib]
name = "walshadow"
path = "src/lib.rs"

[features]
# Compression codecs walshadow's CH-Native emitter (Phase 7) advertises
# in its Hello packet & negotiates onto the wire. Forwarded to
# clickhouse-c-rs so its `chc_*_codec_init` symbols & C TU link only
# what the top crate actually offers. `lz4` matches the ClickHouse
# server default; flip `default-features = false` for an
# uncompressed-only build with neither codec lib linked.
default = ["lz4"]
lz4 = ["clickhouse-c-rs/lz4"]
zstd = ["clickhouse-c-rs/zstd"]

[dependencies]
wal-rs = { path = "../wal-rs" }
clickhouse-c-rs = { path = "clickhouse-c-rs", default-features = false }
anyhow = "1"
bytes = "1"
clap = { version = "4", features = ["derive"] }
crc32c = "0.6"
fallible-iterator = "0.2"
lz4_flex = "0.13"
pglz = "0.1"
postgres-protocol = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smallvec = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time", "net", "fs", "sync"] }
tokio-postgres = "0.7"
toml = { version = "1", default-features = false, features = ["parse", "serde"] }
zstd = "0.13"

[dev-dependencies]
tempfile = "3"
