[workspace]
members = ["clickhouse-c-rs", "bench"]

[package]
name = "walshadow"
version = "0.1.0"
edition = "2024"
description = "Schema-only Postgres + WAL replay catalog mirror for CDC to ClickHouse"
license = "AGPL-3.0-only"

[[bin]]
name = "walshadow-classify"
path = "src/bin/classify.rs"

[[bin]]
name = "walshadow-filter"
path = "src/bin/filter.rs"

[[bin]]
name = "walshadow-stream"
path = "src/bin/stream.rs"

[lib]
name = "walshadow"
path = "src/lib.rs"

[features]
# Compression codecs walshadow's CH-Native emitter advertises
# in its Hello packet & negotiates onto the wire. Forwarded to
# clickhouse-c-rs so its `chc_*_codec_init` symbols & C TU link only
# what the top crate actually offers. `lz4` matches the ClickHouse
# server default; flip `default-features = false` for an
# uncompressed-only build with neither codec lib linked.
default = ["lz4"]
lz4 = ["clickhouse-c-rs/lz4"]
zstd = ["clickhouse-c-rs/zstd"]

[dependencies]
wal-rus = "0.2"
clickhouse-c-rs = { path = "clickhouse-c-rs", default-features = false, features = ["tokio", "tls"] }
anyhow = "1"
astral-tokio-tar = { version = "0.6", default-features = false }
async-channel = "2.5"
async-trait = "0.1"
backon = { version = "1", features = ["tokio-sleep"] }
bytes = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive"] }
crc32c = "0.6"
fallible-iterator = "0.2"
futures = "0.3"
libc = "0.2"
lz4 = "1"
pglz = "0.1"
postgres-protocol = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smallvec = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time", "net", "fs", "sync", "signal", "io-util"] }
tokio-postgres = "0.7"
tokio-util = { version = "0.7", features = ["io"] }
toml = { version = "1", default-features = false, features = ["parse", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt", "ansi"] }
zstd = "0.13"
opentelemetry = "0.32"
opentelemetry_sdk = { version = "0.32", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.32", default-features = false, features = ["grpc-tonic", "trace"] }
tracing-opentelemetry = { version = "0.33", default-features = false }
mimalloc = "0.1.52"

[dev-dependencies]
tempfile = "3"
