[package]
name = "clickhouse-c-rs"
version = "0.1.0"
edition = "2024"
description = "Rust bindings for clickhouse-c, the header-only C client for the ClickHouse Native wire format"
license = "Apache-2.0"

[lib]
name = "clickhouse_c"
path = "src/lib.rs"

[features]
default = ["lz4"]
lz4 = []
zstd = []

[dependencies]
thiserror = "2"

[build-dependencies]
cc = "1"

[dev-dependencies]
tempfile = "3"

[package.metadata.docs.rs]
all-features = true

[[example]]
name = "spawn_clickhouse_local"
path = "examples/spawn_clickhouse_local.rs"
